# babel

./: Babel.sln
Babel/: Babel.cpp  Babel.vcxproj  Babel.vcxproj.filters  CMakeLists.txt  Client.cpp  Client.h  ComStruct.h  Connection.cpp  Connection.h  Database.cpp  Database.h  IDatabase.cpp  IDatabase.h  NetworkModule.cpp  NetworkModule.h  Server.cpp  Server.h  rfc.hpp
BabelClient/: BabelClient.cpp  BabelClient.hpp  CMakeLists.txt  CallWindow.cpp  CallWindow.hpp  CallWindow.ui  ConnectionWindow.cpp  ConnectionWindow.hpp  ConnectionWindow.ui  ContactData.h  ContactLabel.cpp  ContactLabel.hpp  Gui.cpp  Gui.hpp  ICompress.hpp  IGui.hpp  IGuiCallBack.hpp  ISound.hpp  IUdp.hpp  IUdpCallback.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Opus.cpp  Opus.hpp  PaSound.cpp  PaSound.hpp  Udp.cpp  Udp.hpp  img.qrc  main.cpp  rfc.hpp
BabelClient/lib/: CMakeCache.txt  Makefile  cmake_install.cmake
BabelClient/lib/include/QtNetwork/: qhostaddress.h
Database/: Breton.txt  Jahman.txt  Mahatma.txt  SantaClaus.txt
DatabaseSave/: Jahman.txt
boostlib/stage/lib/: libboost_atomic-vc140-mt-1_62.lib  libboost_atomic-vc140-mt-gd-1_62.lib  libboost_chrono-vc140-mt-1_62.lib  libboost_chrono-vc140-mt-gd-1_62.lib  libboost_container-vc140-mt-1_62.lib  libboost_container-vc140-mt-gd-1_62.lib  libboost_context-vc140-mt-1_62.lib  libboost_context-vc140-mt-gd-1_62.lib  libboost_coroutine-vc140-mt-1_62.lib  libboost_coroutine-vc140-mt-gd-1_62.lib  libboost_date_time-vc140-mt-1_62.lib  libboost_date_time-vc140-mt-gd-1_62.lib  libboost_exception-vc140-mt-1_62.lib  (+24 more)
